<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--region Header-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/utb_panjang" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cdv_photo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_logo">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/about_me"
            app:srcCompat="@drawable/img_photo" />

    </androidx.cardview.widget.CardView>
    <!--endregion-->

    <!--region Menu Top-->
    <LinearLayout
        android:id="@+id/lay_MenuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_terbaru"
            android:textColor="@color/dark"
            android:textStyle="bold" />

    </LinearLayout>
    <!--endregion-->

    <!--region news-->
    <ListView
        android:id="@+id/lv_daftar_berita"
        android:layout_width="match_parent"
        android:layout_height="@+id/lay_MenuTop"
        android:layout_marginTop="4dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/bnv_menubottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_MenuTop"
        tools:listitem="@layout/lay_berita" />
    <!--endregion-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_menubottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:itemTextColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>
